complete review for quiz

--- a/pandas-quiz-review.ipynb
+++ b/pandas-quiz-review.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3266ec83",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e9d6367e",
    "metadata": {
     "scrolled": true
@@ -92,7 +92,7 @@
        " max    230.000000  180.000000     6.00000  )"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "32506514",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "42164f99",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "58638360",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "4     50     65           1      False  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3c069c86",
    "metadata": {
     "scrolled": true
@@ -459,7 +459,7 @@
        "255"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,82 +487,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f8cd91c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>name</th>\n",
-       "      <th>type1</th>\n",
-       "      <th>type2</th>\n",
-       "      <th>total</th>\n",
-       "      <th>hp</th>\n",
-       "      <th>attack</th>\n",
-       "      <th>defense</th>\n",
-       "      <th>spatk</th>\n",
-       "      <th>spdef</th>\n",
-       "      <th>speed</th>\n",
-       "      <th>generation</th>\n",
-       "      <th>legendary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>261</th>\n",
-       "      <td>242</td>\n",
-       "      <td>Blissey</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>540</td>\n",
-       "      <td>255</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>75</td>\n",
-       "      <td>135</td>\n",
-       "      <td>55</td>\n",
-       "      <td>2</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       #     name   type1 type2  total   hp  attack  defense  spatk  spdef  \\\n",
-       "261  242  Blissey  Normal   NaN    540  255      10       10     75    135   \n",
-       "\n",
-       "     speed  generation  legendary  \n",
-       "261     55           2      False  "
+       "261    Blissey\n",
+       "Name: name, dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[ df.hp == df.hp.max()]"
+    "df[ df.hp == df.hp.max()].name"
    ]
   },
   {
